[gd_scene load_steps=7 format=3 uid="uid://b6n7cwv706x5n"]

[ext_resource type="Script" path="res://source/match/debug/GodModeHud.gd" id="1_n4lpk"]
[ext_resource type="Script" path="res://source/match/debug/UnitsManager.gd" id="3_1fe88"]
[ext_resource type="Script" path="res://source/match/debug/TimeManager.gd" id="4_0nfe7"]
[ext_resource type="Script" path="res://source/match/debug/FogOfWarManager.gd" id="5_8n1qy"]
[ext_resource type="Script" path="res://source/match/debug/VisiblePlayerManager.gd" id="5_tlapw"]

[sub_resource type="ButtonGroup" id="ButtonGroup_0h5ms"]
resource_local_to_scene = false

[node name="GodModeHUD" type="CanvasLayer"]
script = ExtResource("1_n4lpk")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UnitsManager" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_1fe88")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/UnitsManager"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Units"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SelectedUnitsCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_0h5ms")
text = "Selected"

[node name="AllUnitsCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_0h5ms")
text = "All"

[node name="AllAndNewUnitsCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_0h5ms")
text = "All+New"

[node name="ActionCaptionToggleButton" type="Button" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Action Caption"

[node name="DebugVisualsToggleButton" type="Button" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Visuals"

[node name="ClearAllButton" type="Button" parent="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Clear All"

[node name="TimeManager" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_0nfe7")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TimeManager"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TimeManager/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TimeManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time scale"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/TimeManager/MarginContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeScaleSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/TimeManager/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -73.5
offset_right = 149.0
offset_bottom = 73.5
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VisiblePlayerManager" type="PanelContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
script = ExtResource("5_tlapw")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VisiblePlayerManager"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer/VisiblePlayerManager/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VisiblePlayerManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Visible Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer2/VBoxContainer/VisiblePlayerManager/MarginContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VisiblePlayerSpinBox" type="SpinBox" parent="MarginContainer2/VBoxContainer/VisiblePlayerManager/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FogOfWarManager" type="PanelContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
script = ExtResource("5_8n1qy")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/FogOfWarManager"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer/FogOfWarManager/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/FogOfWarManager/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FoW"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer2/VBoxContainer/FogOfWarManager/MarginContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToggleButton" type="Button" parent="MarginContainer2/VBoxContainer/FogOfWarManager/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Toggle"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer/ActionCaptionToggleButton" to="MarginContainer/VBoxContainer/UnitsManager" method="_on_action_caption_toggle_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer/DebugVisualsToggleButton" to="MarginContainer/VBoxContainer/UnitsManager" method="_on_debug_visuals_toggle_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UnitsManager/MarginContainer/VBoxContainer/ClearAllButton" to="MarginContainer/VBoxContainer/UnitsManager" method="_on_clear_all_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TimeManager/MarginContainer/VBoxContainer/TimeScaleSpinBox" to="MarginContainer/VBoxContainer/TimeManager" method="_on_time_scale_spin_box_value_changed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/FogOfWarManager/MarginContainer/VBoxContainer/ToggleButton" to="MarginContainer2/VBoxContainer/FogOfWarManager" method="_on_toggle_button_pressed"]
